# sidekick

./: CMakeLists.txt  README.md  environmentalhelper.cpp  main.cpp  messagebox.cpp  messagebox.h  notification.h  timer.cpp  timer.h  traynotification.cpp
forms/: mainwindow.ui
include/: environmentalhelper.h  messagebox_notification.h  notification.h  traynotification.h
src/: main.cpp  messagebox_notification.cpp  notification.cpp
